--- a/less/custom/paperfaces-gallery.less
+++ b/less/custom/paperfaces-gallery.less
@@ -9,6 +9,16 @@ html {
 }
 [role="banner"] {
 	height: 100px;
+	h1 {
+		color: @white;
+		a,
+		a:visited {
+			color: @white;
+		}
+	}
+	h2 {
+		color: @white;
+	}
 }
 hr {
 	border-bottom: 0 solid transparent;
